--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-argparse
-numpy
-telegram
-wordcloud
-matplotlib
-bs4
-wikipedia
-python-telegram-bot
+python_telegram_bot==10.0.2
+wordcloud==1.4.1
+numpy==1.16.2
+matplotlib==3.0.2
+requests==2.22.0
+wikipedia==1.4.0
+beautifulsoup4==4.8.0
+telegram==0.0.1
